--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ regex = "1.11"
 reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+thiserror = "1.0"
 tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1.10", features = ["v4"] }
